# serializer version: 1
# name: test_all_entities[0][climate_adc_t3000_state.json][humidifier.adc_t3000_dehumidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 30,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.adc_t3000_dehumidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': ' dehumidifier',
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.DEHUMIDIFIER: 'dehumidifier'>,
    'original_icon': None,
    'original_name': ' dehumidifier',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.68-109-0-mode_dehumidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_adc_t3000_state.json][humidifier.adc_t3000_dehumidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'dehumidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ADC-T3000  dehumidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 60,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 90,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 30,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.adc_t3000_dehumidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_entities[0][climate_adc_t3000_state.json][humidifier.adc_t3000_humidifier-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 70,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'humidifier',
    'entity_category': None,
    'entity_id': 'humidifier.adc_t3000_humidifier',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': ' humidifier',
    'options': dict({
    }),
    'original_device_class': <HumidifierDeviceClass.HUMIDIFIER: 'humidifier'>,
    'original_icon': None,
    'original_name': ' humidifier',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.68-109-0-mode_humidifier',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_adc_t3000_state.json][humidifier.adc_t3000_humidifier-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidifier',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ADC-T3000  humidifier',
      <HumidifierEntityStateAttribute.HUMIDITY: 'humidity'>: 35,
      <HumidifierEntityCapabilityAttribute.MAX_HUMIDITY: 'max_humidity'>: 70,
      <HumidifierEntityCapabilityAttribute.MIN_HUMIDITY: 'min_humidity'>: 10,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <HumidifierEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'humidifier.adc_t3000_humidifier',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
